# auto_img_publisher

./: CMakeLists.txt  package.xml
config/: ost.txt  ost.yaml
launch/: setup_camera.launch
nodes/: time_sync.py
src/: img_bucket.cpp  img_bucket.h
test/: configuration-2019-04-05 14_49_06.txt  result_Aruco11_.txt
